--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cobbland</title>
+    <title>cobb.land</title>
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
 
     <header>
 
-        <h1><a id="title" href="/">cobbland</a></h1>
+        <h1><a id="title" href="/">cobb.land</a></h1>
 
     </header>
 
@@ -18,17 +19,18 @@
 
         <p class="intro">Howdy!</p>
 
-        <p class="intro">My name is Jacob (or Cobb or cobbland or whatever)</p>
+        <p class="intro">My name is Cobb (or cobbland or cobb-dot-land or whatever).</p>
 
         <p class="intro">I’m a writer, artist, programmer, and game designer currently dwelling in the foothills of Appalachia.</p>
 
-        <p>This website is <span class="construction"><span>under</span> <span>construction.</span></span></p>
+        <p>This website is <span class="construction">under construction.</span></p>
 
-        <p>In the meantime, find me on the <a href="https://dice.camp/@cobb">Fediverse</a>.</p>
+        <p>In the meantime, find me on the <a rel="me" href="https://dice.camp/@cobb">Fediverse</a>.</p>
 
     </section>
 
-    <div class="emoji">🚀</div>
+    <a href="https://cobb.land"><img src="./images/cobbland-8831.jpg" alt="old-school 88 by 31 pixel web image, orange and green, says cobb.land" height="31" width="88"></a>
+    <p class="note">↑ link to me</p>
     
 </body>
 </html>
