--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cobb.land</title>
+    <title>Contact | cobb.land</title>
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/styles.css">
 </head>
@@ -34,15 +34,9 @@
 
     <section>
 
-        <p class="intro">Howdy!</p>
+        <h1>Contact</h1>
 
-        <p class="intro">My name is Cobb (or cobbland or cobb-dot-land or whatever).</p>
-
-        <p class="intro">I’m a writer, artist, programmer, and game designer currently dwelling in the foothills of Appalachia.</p>
-
-        <p>This website is <span class="construction">under construction.</span></p>
-
-        <p>In the meantime, find me on the <a rel="me" href="https://dice.camp/@cobb">Fediverse</a>.</p>
+        <p>This page is <span class="construction">under construction.</span></p>
 
     </section>
 
