--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
                     <a href="/contact">Contact</a>
                 </li>
                 <li>
+                    <a href="/now">Now</a>
+                </li>
+                <li>
                     <a href="/blog">Blog</a>
+                </li>
+                <li>
+                    <a href="/feed.rss">RSS</a>
                 </li>
             </ul>
         </nav>
@@ -34,20 +40,24 @@
 
     <section>
 
-        <p class="intro">Howdy!</p>
+        <h1>Howdy!</h2>
 
-        <p class="intro">My name is Cobb (or cobbland or cobb-dot-land or whatever).</p>
+        <p class="note">This website is (permanently) <span class="construction">under construction.</span></p>
 
-        <p class="intro">I’m a writer, artist, programmer, and game designer currently dwelling in the foothills of Appalachia.</p>
+        <p>My name is Cobb (or cobbland or cobb-dot-land) and this is my website.</p>
 
-        <p>This website is <span class="construction">under construction.</span></p>
+        <p>There will be lots of stuff here eventually. I'm working in it.</p>
 
-        <p>In the meantime, find me on the <a rel="me" href="https://dice.camp/@cobb">Fediverse</a>.</p>
+        <h2>Stay up to date.</h2>
+
+        <p>There will be an <a href="/feed.rss">RSS feed</a> to follow once there is anything to keep up with. I also have a <a href="https://buttondown.com/orbitaldetritus">newsletter</a> (for some reason). And you can find me on the <a rel="me" href="https://dice.camp/@cobb">Fediverse</a>.</p>
 
     </section>
 
-    <a href="https://cobb.land"><img src="/images/cobbland-8831.jpg" alt="old-school 88 by 31 pixel web image, orange and green, says cobb.land" height="31" width="88"></a>
-    <p class="note">↑ link to me</p>
+    <footer>
+        <a href="https://cobb.land"><img src="/images/cobbland-8831.jpg" alt="old-school 88 by 31 pixel web image, orange and green, says cobb.land" height="31" width="88"></a>
+        <p class="note">↑ link to me</p>
+    </footer>
     
 </body>
 </html>
