Add relme for auth

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <h2>Stay up to date.</h2>
 
-        <p>There will be an <a href="/feed.rss">RSS feed</a> to follow once there is anything to keep up with. I also have a <a href="https://buttondown.com/orbitaldetritus">newsletter</a> (for some reason). And you can find me on the <a rel="me" href="https://dice.camp/@cobb">Fediverse</a>.</p>
+        <p>There will be an <a href="/feed.rss">RSS feed</a> to follow once there is anything to keep up with. I also have a <a href="https://buttondown.com/orbitaldetritus">newsletter</a> (for some reason). And you can find me on the <a rel="me" href="https://dice.camp/@cobb">Fediverse</a>.<a class="invisible" href="mailto:hello@cobb.land" rel="me"><a class="invisible" href="https://github.com/cobbland" rel="me"></p>
 
     </section>
 
