--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 <body>
 
+    <div class="h-card invisible">
+        <a class="u-url" href="https://cobb.land">
+        <a href="https://github.com/cobbland" rel="me">
+        <a rel="me" href="https://dice.camp/@cobb">
+        <a class="u-email" href="mailto:hello@cobb.land" rel="me">
+        <a class="u-logo u-photo" href="/images/android-chrome-512x512.png" rel="me">
+    </div>
+
     <header>
 
         <h1><a id="title" href="/">cobb.land</a></h1>
@@ -50,7 +58,7 @@
 
         <h2>Stay up to date.</h2>
 
-        <p>There will be an <a href="/feed.rss">RSS feed</a> to follow once there is anything to keep up with. I also have a <a href="https://buttondown.com/orbitaldetritus">newsletter</a> (for some reason). And you can find me on the <a rel="me" href="https://dice.camp/@cobb">Fediverse</a>.<a class="invisible" href="mailto:hello@cobb.land" rel="me"><a class="invisible" href="https://github.com/cobbland" rel="me"></p>
+        <p>There will be an <a href="/feed.rss">RSS feed</a> to follow once there is anything to keep up with. I also have a <a href="https://buttondown.com/orbitaldetritus">newsletter</a> (for some reason). And you can find me on the <a rel="me" href="https://dice.camp/@cobb">Fediverse</a>.</p>
 
     </section>
 
