--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <body>
 
     <div class="h-card invisible">
-        <a class="u-url" href="https://cobb.land">
-        <a href="https://github.com/cobbland" rel="me">
-        <a rel="me" href="https://dice.camp/@cobb">
+        <a class="u-url" rel="me" href="https://cobb.land">
+        <a class="u-url" href="https://github.com/cobbland" rel="me">
+        <a rel="me" class="u-url" href="https://dice.camp/@cobb">
         <a class="u-email" href="mailto:hello@cobb.land" rel="me">
         <a class="u-logo u-photo" href="/images/android-chrome-512x512.png" rel="me">
+        <p class="p-note">Writer, artist, programmer, and game designer currently dwelling in the foothills of Appalachia.</p>
     </div>
 
     <header>
