Fix relme email

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a class="u-url" rel="me" href="https://cobb.land">
         <a class="u-url" href="https://github.com/cobbland" rel="me">
         <a rel="me" class="u-url" href="https://dice.camp/@cobb">
-        <a class="u-email" href="mailto:hello@cobb.land" rel="me">
+        <a class="u-email" href="mailto:hello@cobb.land" rel="me">hello@cobb.land</a>
         <a class="u-logo u-photo" href="/images/android-chrome-512x512.png" rel="me">
         <p class="p-note">Writer, artist, programmer, and game designer currently dwelling in the foothills of Appalachia.</p>
     </div>
@@ -59,7 +59,7 @@
 
         <h2>Stay up to date.</h2>
 
-        <p>There will be an <a href="/feed.rss">RSS feed</a> to follow once there is anything to keep up with. I also have a <a href="https://buttondown.com/orbitaldetritus">newsletter</a> (for some reason). And you can find me on the <a rel="me" href="https://dice.camp/@cobb">Fediverse</a>.</p>
+        <p>There will be an <a href="/feed.rss">RSS feed</a> to follow once there is anything to keep up with. I also have a <a href="https://buttondown.com/orbitaldetritus">newsletter</a> (for some reason). And you can find me on the <a href="https://dice.camp/@cobb">Fediverse</a>.</p>
 
     </section>
 
