--- a/about/index.html
+++ b/about/index.html
@@ -9,55 +9,46 @@
 </head>
 <body>
 
-    <header>
-
-        <h1><a id="title" href="/">cobb.land</a></h1>
-
-        <nav>
-            <ul>
-                <li>
-                    <a href="/">Home</a>
-                </li>
-                <li>
-                    <a href="/about">About</a>
-                </li>
-                <li>
-                    <a href="/contact">Contact</a>
-                </li>
-                <li>
-                    <a href="/now">Now</a>
-                </li>
-                <li>
-                    <a href="/blog">Blog</a>
-                </li>
-                <li>
-                    <a href="/feed.rss">RSS</a>
-                </li>
-            </ul>
-        </nav>
-
-    </header>
-
-    <section>
-
-        <h1>About</h1>
-
-        <h2>Me</h2>
-
-        <p>My name is Cobb (or cobbland or cobb-dot-land).</p>
-
-        <p>I’m a writer, artist, programmer, and game designer currently dwelling in the foothills of Appalachia.</p>
+    <main>
+        <header>
+            <h1><a id="title" href="/">cobb.land</a></h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="/">Home</a>
+                    </li>
+                    <li>
+                        <a href="/about">About</a>
+                    </li>
+                    <li>
+                        <a href="/contact">Contact</a>
+                    </li>
+                    <li>
+                        <a href="/now">Now</a>
+                    </li>
+                    <li>
+                        <a href="/blog">Blog</a>
+                    </li>
+                    <li>
+                        <a href="/feed.rss">RSS</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <section>
+            <h1>About</h1>
+            <h2>Me</h2>
+            <p>My name is Cobb (or cobbland or cobb-dot-land).</p>
+            <p>I’m a writer, artist, programmer, and game designer currently dwelling in the foothills of Appalachia.</p>
         
-        <h2>This website</h2>
-
-        <p>This website was crafted by hand in HTML and CSS using <a href="https://vscodium.com/">VSCodium</a>. It's hosted on <a href="https://www.netlify.com/">Netlify</a> and deployed from <a href="https://github.com/cobbland/cobb.land">Github</a> (for now).</a></p>
-
-    </section>
-
-    <footer>
-        <a href="https://cobb.land"><img src="/images/cobbland-8831.jpg" alt="old-school 88 by 31 pixel web image, orange and green, says cobb.land" height="31" width="88"></a>
-        <p class="note">↑ link to me</p>
-    </footer>
+            <h2>This website</h2>
+            <p>This website was crafted by hand in HTML and CSS using <a href="https://vscodium.com/">VSCodium</a>. It's hosted on <a href="https://www.netlify.com/">Netlify</a> and deployed from <a href="https://github.com/cobbland/cobb.land">Github</a> (for now).</a></p>
+        </section>
+        <footer>
+            <a href="https://cobb.land"><img src="/images/cobbland-8831.jpg" alt="old-school 88 by 31 pixel web image, orange and green, says cobb.land" height="31" width="88"></a>
+            <p class="note">↑ link to me</p>
+        </footer>
+    </main>
     
 </body>
 </html>
