--- a/contact/index.html
+++ b/contact/index.html
@@ -9,53 +9,44 @@
 </head>
 <body>
 
-    <header>
-
-        <h1><a id="title" href="/">cobb.land</a></h1>
-
-        <nav>
-            <ul>
-                <li>
-                    <a href="/">Home</a>
-                </li>
-                <li>
-                    <a href="/about">About</a>
-                </li>
-                <li>
-                    <a href="/contact">Contact</a>
-                </li>
-                <li>
-                    <a href="/now">Now</a>
-                </li>
-                <li>
-                    <a href="/blog">Blog</a>
-                </li>
-                <li>
-                    <a href="/feed.rss">RSS</a>
-                </li>
-            </ul>
-        </nav>
-
-    </header>
-
-    <section>
-
-        <h1>Contact</h1>
-
-        <p>Have a comment or question? Want to collaborate on something? Maybe you just want to chat? I love email. Really. Please email me. I promise I'll write back:</p>
-
-        <p class="email">hello @ this domain name</p>
-
-        <p>Also, find me on the Fediverse:</p>
-
-        <p><a rel="me" href="https://dice.camp/@cobb">@cobb@dice.camp</a></p>
-
-    </section>
-
-    <footer>
-        <a href="https://cobb.land"><img src="/images/cobbland-8831.jpg" alt="old-school 88 by 31 pixel web image, orange and green, says cobb.land" height="31" width="88"></a>
-        <p class="note">↑ link to me</p>
-    </footer>
+    <main>
+        <header>
+            <h1><a id="title" href="/">cobb.land</a></h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="/">Home</a>
+                    </li>
+                    <li>
+                        <a href="/about">About</a>
+                    </li>
+                    <li>
+                        <a href="/contact">Contact</a>
+                    </li>
+                    <li>
+                        <a href="/now">Now</a>
+                    </li>
+                    <li>
+                        <a href="/blog">Blog</a>
+                    </li>
+                    <li>
+                        <a href="/feed.rss">RSS</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <section>
+            <h1>Contact</h1>
+            <p>Have a comment or question? Want to collaborate on something? Maybe you just want to chat? I love email. Really. Please email me. I promise I'll write back:</p>
+            <p class="email">hello @ this domain name</p>
+            <p>Also, find me on the Fediverse:</p>
+            <p><a rel="me" href="https://dice.camp/@cobb">@cobb@dice.camp</a></p>
+        </section>
+        <footer>
+            <a href="https://cobb.land"><img src="/images/cobbland-8831.jpg" alt="old-school 88 by 31 pixel web image, orange and green, says cobb.land" height="31" width="88"></a>
+            <p class="note">↑ link to me</p>
+        </footer>
+    </main>
     
 </body>
 </html>
