--- a/now/index.html
+++ b/now/index.html
@@ -9,53 +9,46 @@
 </head>
 <body>
 
-    <header>
-
-        <h1><a id="title" href="/">cobb.land</a></h1>
-
-        <nav>
+    <main>
+        <header>
+            <h1><a id="title" href="/">cobb.land</a></h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="/">Home</a>
+                    </li>
+                    <li>
+                        <a href="/about">About</a>
+                    </li>
+                    <li>
+                        <a href="/contact">Contact</a>
+                    </li>
+                    <li>
+                        <a href="/now">Now</a>
+                    </li>
+                    <li>
+                        <a href="/blog">Blog</a>
+                    </li>
+                    <li>
+                        <a href="/feed.rss">RSS</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <section>
+            <h1>Now</h1>
+            <p>Aside from trying to piece together this website, I'm also:</p>
             <ul>
-                <li>
-                    <a href="/">Home</a>
-                </li>
-                <li>
-                    <a href="/about">About</a>
-                </li>
-                <li>
-                    <a href="/contact">Contact</a>
-                </li>
-                <li>
-                    <a href="/now">Now</a>
-                </li>
-                <li>
-                    <a href="/blog">Blog</a>
-                </li>
-                <li>
-                    <a href="/feed.rss">RSS</a>
-                </li>
+                <li>Getting really into the Commodore 64</li>
+                <li>Working my way through <a href="https://www.theodinproject.com/">The Odin Project</a></li>
+                <li>Trying to learn Thai</li>
             </ul>
-        </nav>
-
-    </header>
-
-    <section>
-
-        <h1>Now</h1>
-
-        <p>Aside from trying to piece together this website, I'm also:</p>
-
-        <ul>
-            <li>Getting really into the Commodore 64</li>
-            <li>Working my way through <a href="https://www.theodinproject.com/">The Odin Project</a></li>
-            <li>Trying to learn Thai</li>
-        </ul>
-
-    </section>
-
-    <footer>
-        <a href="https://cobb.land"><img src="/images/cobbland-8831.jpg" alt="old-school 88 by 31 pixel web image, orange and green, says cobb.land" height="31" width="88"></a>
-        <p class="note">↑ link to me</p>
-    </footer>
+        </section>
+        <footer>
+            <a href="https://cobb.land"><img src="/images/cobbland-8831.jpg" alt="old-school 88 by 31 pixel web image, orange and green, says cobb.land" height="31" width="88"></a>
+            <p class="note">↑ link to me</p>
+        </footer>
+    </main>
     
 </body>
 </html>
