--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a rel="me" class="u-url" href="https://dice.camp/@cobb">
         <a class="u-email" href="mailto:hello@cobb.land" rel="me">hello@cobb.land</a>
         <a class="u-logo u-photo" href="/images/android-chrome-512x512.png" rel="me">
-        <p class="p-note">Writer, artist, programmer, and game designer currently dwelling in the foothills of Appalachia.</p>
+        <p class="p-note">A writer, artist, programmer, and game designer currently dwelling in the foothills of Appalachia.</p>
     </div>
 
     <main>
@@ -46,11 +46,9 @@
         </header>
         <section>
             <h1>Howdy!</h2>
-            <p class="note">This website is (permanently) <span class="construction">under construction.</span></p>
             <p>My name is Cobb (or cobbland or cobb-dot-land) and this is my website.</p>
-            <p>There will be lots of stuff here eventually. I'm working in it.</p>
             <h2>Stay up to date.</h2>
-            <p>There will be an <a href="/feed.rss">RSS feed</a> to follow once there is anything to keep up with. I also have a <a href="https://buttondown.com/orbitaldetritus">newsletter</a> (for some reason). And you can find me on the <a href="https://dice.camp/@cobb">Fediverse</a>.</p>
+            <p>Follow my <a href="/feed.rss">RSS feed</a> to keep up. I also have a <a href="https://buttondown.com/orbitaldetritus">newsletter</a> (for some reason). And you can find me on the <a href="https://dice.camp/@cobb">Fediverse</a>.</p>
         </section>
         <footer>
             <a href="https://cobb.land"><img src="/images/cobbland-8831.jpg" alt="old-school 88 by 31 pixel web image, orange and green, says cobb.land" height="31" width="88"></a>
