Add profile picture

--- a/about/index.html
+++ b/about/index.html
@@ -37,6 +37,7 @@
         </header>
         <section>
             <h1>About</h1>
+            <img src="/images/android-chrome-192x192.png" alt="An orange on green symbol that looks like both a J and a D—it's an cherek.">
             <h2>Me</h2>
             <p>My name is Cobb (or cobbland or cobb-dot-land).</p>
             <p>I’m a writer, artist, programmer, and game designer currently dwelling in the foothills of Appalachia.</p>
