--- a/about/index.html
+++ b/about/index.html
@@ -3,53 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About | cobb.land</title>
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <meta name="theme-color" content="#fff8e7">
+    <title>about | cobb.land</title>
+    <link rel="icon" href="/images/favicon.ico" sizes="16x16 32x32 48x48" type="image/x-icon">
+    <link rel=icon href="images/favicon-16x16.png" sizes="16x16" type="image/png">
+    <link rel=icon href="images/favicon-32x32.png" sizes="32x32" type="image/png">
+    <link rel=icon href="images/android-chrome-192x192.png" sizes="192x192" type="image/png">
+    <link rel=icon href="images/android-chrome-512x512.png" sizes="512x512" type="image/png">
+    <link rel="apple-touch-icon icon" href="images/apple-touch-icon.png" sizes="180x180" type="image/png">
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
 
-    <main>
-        <header>
-            <h1><a id="title" href="/">cobb.land</a></h1>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="/">Home</a>
-                    </li>
-                    <li>
-                        <a href="/about">About</a>
-                    </li>
-                    <li>
-                        <a href="/contact">Contact</a>
-                    </li>
-                    <li>
-                        <a href="/now">Now</a>
-                    </li>
-                    <li>
-                        <a href="/blog">Blog</a>
-                    </li>
-                    <li>
-                        <a href="/feed.rss">RSS</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <section>
-            <h1>About</h1>
-            <img src="/images/android-chrome-192x192.png" alt="An orange on green symbol that looks like both a J and a D—it's an cherek.">
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="/">cobb.land</a>
+                </li>
+                <li>
+                    <a href="/about">about</a>
+                </li>
+                <li>
+                    <a href="/contact">contact</a>
+                </li>
+                <li>
+                    <a href="/now">now</a>
+                </li>
+                <li>
+                    <a href="/blog">blog</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="content-window">
+        <div class="title-bar">
+            <div class="title-lines">
+                <div class="lines">
+                    <hr class="title-bar-line">
+                    <hr class="title-bar-line">
+                    <hr class="title-bar-line">
+                    <hr class="title-bar-line">
+                    <hr class="title-bar-line">
+                </div>
+                <h1 class="title">/about</h1>
+                <div class="lines">
+                    <hr class="title-bar-line">
+                    <hr class="title-bar-line">
+                    <hr class="title-bar-line">
+                    <hr class="title-bar-line">
+                    <hr class="title-bar-line">
+                </div>
+            </div>
+        </div>
+        <main>
             <h2>Me</h2>
+            <img src="/images/android-chrome-192x192.png" alt="An orange on green symbol that looks like both a J and a D—it's an cherek.">
             <p>My name is Cobb (or cobbland or cobb-dot-land).</p>
             <p>I’m a writer, artist, programmer, and game designer currently dwelling in the foothills of Appalachia.</p>
         
             <h2>This website</h2>
             <p>This website was crafted by hand in HTML and CSS using <a href="https://vscodium.com/">VSCodium</a>. It's hosted on <a href="https://www.netlify.com/">Netlify</a> and deployed from <a href="https://github.com/cobbland/cobb.land">Github</a> (for now).</a></p>
-        </section>
-        <footer>
-            <a href="https://cobb.land"><img src="/images/cobbland-8831.jpg" alt="old-school 88 by 31 pixel web image, orange and green, says cobb.land" height="31" width="88"></a>
-            <p class="note">↑ link to me</p>
-        </footer>
-    </main>
-    
+        </main>
+    </div>
+
+    <footer>
+            <a class="link-icon" href="https://cobb.land">
+                <img src="/images/cobbland-8831.jpg" alt="old-school 88 by 31 pixel web image, orange and green, says cobb.land" height="31" width="88">
+                <p>Link to me</p>
+            </a>
+            <a class="link-icon" href="/feed.rss">
+                <img src="/images/rss-8831.jpg" alt="RSS" height="31" width="88">
+                <p>Subscribe</p>
+            </a>
+            <a class="link-icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+                <img src="/images/by-nc-sa.png" alt="cc by-nc-sa" height="31" width="88">
+                <p>CC BY-NC-SA</p>
+            </a>
+    </footer>
+
 </body>
 </html>
