--- a/contact/index.html
+++ b/contact/index.html
@@ -3,50 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact | cobb.land</title>
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <meta name="theme-color" content="#fff8e7">
+    <title>contact | cobb.land</title>
+    <link rel="icon" href="/images/favicon.ico" sizes="16x16 32x32 48x48" type="image/x-icon">
+    <link rel=icon href="images/favicon-16x16.png" sizes="16x16" type="image/png">
+    <link rel=icon href="images/favicon-32x32.png" sizes="32x32" type="image/png">
+    <link rel=icon href="images/android-chrome-192x192.png" sizes="192x192" type="image/png">
+    <link rel=icon href="images/android-chrome-512x512.png" sizes="512x512" type="image/png">
+    <link rel="apple-touch-icon icon" href="images/apple-touch-icon.png" sizes="180x180" type="image/png">
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
 
-    <main>
-        <header>
-            <h1><a id="title" href="/">cobb.land</a></h1>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="/">Home</a>
-                    </li>
-                    <li>
-                        <a href="/about">About</a>
-                    </li>
-                    <li>
-                        <a href="/contact">Contact</a>
-                    </li>
-                    <li>
-                        <a href="/now">Now</a>
-                    </li>
-                    <li>
-                        <a href="/blog">Blog</a>
-                    </li>
-                    <li>
-                        <a href="/feed.rss">RSS</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <section>
-            <h1>Contact</h1>
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="/">cobb.land</a>
+                </li>
+                <li>
+                    <a href="/about">about</a>
+                </li>
+                <li>
+                    <a href="/contact">contact</a>
+                </li>
+                <li>
+                    <a href="/now">now</a>
+                </li>
+                <li>
+                    <a href="/blog">blog</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="content-window">
+        <div class="title-bar">
+            <div class="title-lines">
+                <div class="lines">
+                    <hr class="title-bar-line">
+                    <hr class="title-bar-line">
+                    <hr class="title-bar-line">
+                    <hr class="title-bar-line">
+                    <hr class="title-bar-line">
+                </div>
+                <h1 class="title">/contact</h1>
+                <div class="lines">
+                    <hr class="title-bar-line">
+                    <hr class="title-bar-line">
+                    <hr class="title-bar-line">
+                    <hr class="title-bar-line">
+                    <hr class="title-bar-line">
+                </div>
+            </div>
+        </div>
+        <main>
             <p>Have a comment or question? Want to collaborate on something? Maybe you just want to chat? I love email. Really. Please email me. I promise I'll write back:</p>
             <p class="email">hello @ this domain name</p>
             <p>Also, find me on the Fediverse:</p>
-            <p><a rel="me" href="https://dice.camp/@cobb">@cobb@dice.camp</a></p>
-        </section>
-        <footer>
-            <a href="https://cobb.land"><img src="/images/cobbland-8831.jpg" alt="old-school 88 by 31 pixel web image, orange and green, says cobb.land" height="31" width="88"></a>
-            <p class="note">↑ link to me</p>
-        </footer>
-    </main>
-    
+            <p><a rel="me" href="https://dice.camp/@cobb">@cobb@dice.camp</a></p>    
+        </main>
+    </div>
+
+    <footer>
+            <a class="link-icon" href="https://cobb.land">
+                <img src="/images/cobbland-8831.jpg" alt="old-school 88 by 31 pixel web image, orange and green, says cobb.land" height="31" width="88">
+                <p>Link to me</p>
+            </a>
+            <a class="link-icon" href="/feed.rss">
+                <img src="/images/rss-8831.jpg" alt="RSS" height="31" width="88">
+                <p>Subscribe</p>
+            </a>
+            <a class="link-icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+                <img src="/images/by-nc-sa.png" alt="cc by-nc-sa" height="31" width="88">
+                <p>CC BY-NC-SA</p>
+            </a>
+    </footer>
+ 
 </body>
 </html>
