--- a/index.html
+++ b/index.html
@@ -15,6 +15,71 @@
 </head>
 <body>
 
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="/">cobb.land</a>
+                </li>
+                <li>
+                    <a href="/about">about</a>
+                </li>
+                <li>
+                    <a href="/contact">contact</a>
+                </li>
+                <li>
+                    <a href="/now">now</a>
+                </li>
+                <li>
+                    <a href="/blog">blog</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="content-window">
+        <div class="title-bar">
+            <div class="title-lines">
+                <div class="lines">
+                    <hr class="title-bar-line">
+                    <hr class="title-bar-line">
+                    <hr class="title-bar-line">
+                    <hr class="title-bar-line">
+                    <hr class="title-bar-line">
+                </div>
+                <h1 class="title">cobb.land</h1>
+                <div class="lines">
+                    <hr class="title-bar-line">
+                    <hr class="title-bar-line">
+                    <hr class="title-bar-line">
+                    <hr class="title-bar-line">
+                    <hr class="title-bar-line">
+                </div>
+            </div>
+        </div>
+        <main>
+            <h2>Howdy!</h2>
+            <p>My name is Cobb (or cobbland or cobb-dot-land) and this is my website.</p>
+            <h2>Stay up to date.</h2>
+            <p>Follow my <a href="/feed.rss">RSS feed</a> to keep up. I also have a <a href="https://buttondown.com/orbitaldetritus">newsletter</a> (for some reason). And you can find me on the <a href="https://dice.camp/@cobb">Fediverse</a>.</p>
+        </main>
+    </div>
+
+    <footer>
+            <a class="link-icon" href="https://cobb.land">
+                <img src="/images/cobbland-8831.jpg" alt="old-school 88 by 31 pixel web image, orange and green, says cobb.land" height="31" width="88">
+                <p>Link to me</p>
+            </a>
+            <a class="link-icon" href="/feed.rss">
+                <img src="/images/rss-8831.jpg" alt="RSS" height="31" width="88">
+                <p>Subscribe</p>
+            </a>
+            <a class="link-icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+                <img src="/images/by-nc-sa.png" alt="cc by-nc-sa" height="31" width="88">
+                <p>CC BY-NC-SA</p>
+            </a>
+    </footer>
+
     <div class="h-card invisible">
         <a class="u-url" rel="me" href="https://cobb.land">
         <a class="u-url" href="https://github.com/cobbland" rel="me">
@@ -23,44 +88,6 @@
         <a class="u-logo u-photo" href="/images/android-chrome-512x512.png" rel="me">
         <p class="p-note">A writer, artist, programmer, and game designer currently dwelling in the foothills of Appalachia.</p>
     </div>
-
-    <main>
-        <header>
-            <h1><a id="title" href="/">cobb.land</a></h1>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="/">Home</a>
-                    </li>
-                    <li>
-                        <a href="/about">About</a>
-                    </li>
-                    <li>
-                        <a href="/contact">Contact</a>
-                    </li>
-                    <li>
-                        <a href="/now">Now</a>
-                    </li>
-                    <li>
-                        <a href="/blog">Blog</a>
-                    </li>
-                    <li>
-                        <a href="/feed.rss">RSS</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <section>
-            <h1>Howdy!</h2>
-            <p>My name is Cobb (or cobbland or cobb-dot-land) and this is my website.</p>
-            <h2>Stay up to date.</h2>
-            <p>Follow my <a href="/feed.rss">RSS feed</a> to keep up. I also have a <a href="https://buttondown.com/orbitaldetritus">newsletter</a> (for some reason). And you can find me on the <a href="https://dice.camp/@cobb">Fediverse</a>.</p>
-        </section>
-        <footer>
-            <a href="https://cobb.land"><img src="/images/cobbland-8831.jpg" alt="old-school 88 by 31 pixel web image, orange and green, says cobb.land" height="31" width="88"></a>
-            <p class="note">↑ link to me</p>
-        </footer>
-    </main>
     
 </body>
 </html>
