--- a/about/index.html
+++ b/about/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#fff8e7">
+    <meta name="theme-color" content="#b2b2b2">
     <title>about | cobb.land</title>
     <link rel="icon" href="/images/favicon.ico" sizes="16x16 32x32 48x48" type="image/x-icon">
-    <link rel=icon href="images/favicon-16x16.png" sizes="16x16" type="image/png">
-    <link rel=icon href="images/favicon-32x32.png" sizes="32x32" type="image/png">
-    <link rel=icon href="images/android-chrome-192x192.png" sizes="192x192" type="image/png">
-    <link rel=icon href="images/android-chrome-512x512.png" sizes="512x512" type="image/png">
-    <link rel="apple-touch-icon icon" href="images/apple-touch-icon.png" sizes="180x180" type="image/png">
+    <link rel=icon href="/images/favicon-16x16.png" sizes="16x16" type="image/png">
+    <link rel=icon href="/images/favicon-32x32.png" sizes="32x32" type="image/png">
+    <link rel=icon href="/images/android-chrome-192x192.png" sizes="192x192" type="image/png">
+    <link rel=icon href="/images/android-chrome-512x512.png" sizes="512x512" type="image/png">
+    <link rel="apple-touch-icon icon" href="/images/apple-touch-icon.png" sizes="180x180" type="image/png">
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
