Fix slash in title bars

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <hr class="title-bar-line">
                     <hr class="title-bar-line">
                 </div>
-                <h1 class="title">cobb.land</h1>
+                <h1 class="title home-title">cobb.land</h1>
                 <div class="lines">
                     <hr class="title-bar-line">
                     <hr class="title-bar-line">
