--- a/about/index.html
+++ b/about/index.html
@@ -47,7 +47,7 @@
                     <hr class="title-bar-line">
                     <hr class="title-bar-line">
                 </div>
-                <h1 class="title">/about</h1>
+                <h1 class="title">About</h1>
                 <div class="lines">
                     <hr class="title-bar-line">
                     <hr class="title-bar-line">
