--- a/now/index.html
+++ b/now/index.html
@@ -47,7 +47,7 @@
                     <hr class="title-bar-line">
                     <hr class="title-bar-line">
                 </div>
-                <h1 class="title">/now</h1>
+                <h1 class="title">Now</h1>
                 <div class="lines">
                     <hr class="title-bar-line">
                     <hr class="title-bar-line">
