--- a/contact/index.html
+++ b/contact/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#b2b2b2">
-    <title>cobb.land</title>
+    <title>contact | cobb.land</title>
     <link rel="icon" href="/images/favicon.ico" sizes="16x16 32x32 48x48" type="image/x-icon">
     <link rel=icon href="/images/favicon-16x16.png" sizes="16x16" type="image/png">
     <link rel=icon href="/images/favicon-32x32.png" sizes="32x32" type="image/png">
@@ -47,7 +47,7 @@
                     <hr class="title-bar-line">
                     <hr class="title-bar-line">
                 </div>
-                <h1 class="title home-title">cobb.land</h1>
+                <h1 class="title">Contact</h1>
                 <div class="lines">
                     <hr class="title-bar-line">
                     <hr class="title-bar-line">
@@ -58,10 +58,10 @@
             </div>
         </div>
         <main>
-            <h2>Howdy!</h2>
-            <p>My name is Cobb (or cobbland or cobb-dot-land) and this is my website.</p>
-            <h2>Stay up to date.</h2>
-            <p>Follow my <a href="/feed.rss">RSS feed</a> to keep up. I also have a <a href="https://buttondown.com/orbitaldetritus">newsletter</a> (for some reason). And you can find me on the <a href="https://dice.camp/@cobb">Fediverse</a>.</p>
+            <p>Have a comment or question? Want to collaborate on something? Maybe you just want to chat? I love email. Really. Please email me. I promise I'll write back:</p>
+            <p class="email">hello @ this domain name</p>
+            <p>Also, find me on the Fediverse:</p>
+            <p><a rel="me" href="https://dice.camp/@cobb">@cobb@dice.camp</a></p>    
         </main>
     </div>
 
@@ -79,15 +79,6 @@
                 <p>CC BY-NC-SA</p>
             </a>
     </footer>
-
-    <div class="h-card invisible">
-        <a class="u-url" rel="me" href="https://cobb.land">
-        <a class="u-url" href="https://github.com/cobbland" rel="me">
-        <a rel="me" class="u-url" href="https://dice.camp/@cobb">
-        <a class="u-email" href="mailto:hello@cobb.land" rel="me">hello@cobb.land</a>
-        <a class="u-logo u-photo" href="/images/android-chrome-512x512.png" rel="me">
-        <p class="p-note">A writer, artist, programmer, and game designer currently dwelling in the foothills of Appalachia.</p>
-    </div>
-    
+ 
 </body>
 </html>
