--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ special: home-title
 <h2>Howdy!</h2>
 <p>My name is Cobb (or cobbland or cobb-dot-land) and this is my website.</p>
 <h2>Stay up to date.</h2>
-<p>Follow my <a href="/feed.rss">RSS feed</a> to keep up. I also have a <a href="https://buttondown.com/orbitaldetritus">newsletter</a> (for some reason). And you can find me on the <a href="https://dice.camp/@cobb">Fediverse</a>.</p>
+<p>Follow my <a href="/feed.xml">RSS feed</a> to keep up. I also have a <a href="https://buttondown.com/orbitaldetritus">newsletter</a> (for some reason). And you can find me on the <a href="https://dice.camp/@cobb">Fediverse</a>.</p>
 
 <div class="h-card invisible">
     <a class="u-url" rel="me" href="https://cobb.land">
