--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@ special: home-title
 ---
 <h2>Howdy!</h2>
 <p>I'm Cobb (or cobbland or cobb-dot-land) and this is my website.</p>
+
+<a href="/about">More about me</a>
+<a href="/colophon">More about this website</a>
+
 <h2>Stay up to date.</h2>
 <p>Follow my <a href="/feed.xml">RSS feed</a> to keep up. I also have a <a href="https://buttondown.com/orbitaldetritus">newsletter</a> (for some reason). And you can find me on the <a href="https://dice.camp/@cobb">Fediverse</a>.</p>
